--- a/Tyuiu.PasechnikPA.Sprint1.Task0.V5.Lib/Tyuiu.PasechnikPA.Sprint1.Task0.V5.Lib.csproj
+++ b/Tyuiu.PasechnikPA.Sprint1.Task0.V5.Lib/Tyuiu.PasechnikPA.Sprint1.Task0.V5.Lib.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D2FC2AD0-5585-4485-B421-8024CFB91C53}</ProjectGuid>
+    <ProjectGuid>{DC7070FE-B41B-4082-9C5C-C4CA7F0C4E94}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Tyuiu.PasechnikPA.Sprint1.Task0.V5.Lib</RootNamespace>
@@ -40,7 +40,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="tyuiu.cources.programming.interfaces">
-      <HintPath>..\..\DLL\tyuiu.cources.programming.interfaces.dll</HintPath>
+      <HintPath>..\tyuiu.cources.programming.interfaces.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
